# Carro

./: .gitignore  LICENSE.save  README.md  db.sqlite3  pyproject.toml
.github/workflows/: django.yml
accounts/: views.py
accounts/templates/: login.html  register.html
app/: settings.py  urls.py
app/templates/: base.html
cars/: admin.py  forms.py  models.py  signals.py  views.py
cars/migrations/: 0001_initial.py  0002_brand_alter_car_brand.py  0003_car_photo_car_plate.py  0004_carinvertory.py  0005_rename_carinvertory_carinventory_and_more.py  0006_car_bio.py
cars/templates/: car_delete.html  car_detail.html  car_update.html  cars.html  new_car.html
genai/: cleint.py
