[tool.poetry]
name = "davidson"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.1.4"
pillow = "^12.2.0"
python-dotenv = "^1.2.2"
google-genai = "^2.10.0"
psycopg2-binary = "^2.9.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
